[metadata]
name = DNA-RECAP
version = 0.0.1
author = Irenaeus Chan
author_email = chani@wustl.edu
description = DNA Repair Event Classification, Analysis, and Processing - A tool to complement CIBAR-seq
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IrenaeusChan/DNA-RECAP
project_urls =
    Bug Tracker = https://github.com/IrenaeusChan/DNA-RECAP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License
    Operating System :: OS Independent
license_files =
    LICENSE

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    args==0.1.0
    click>=8.0.3
    clint==0.5.1
    numpy>=1.21.0
    pandas>=2.0.0
    python-dateutil==2.8.2
    numba==0.59.0
    pysam>=0.21.0
    biotite>=0.37.0
    pyranges>=0.0.127
    tqdm==4.67.1

[options.entry_points]
console_scripts =
    dna-recap = dnarecap.cli:cli
